# liquidqc

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  NOTICE  README.md  TODO-plot-tweaks-report.md  build.rs
.cargo/: audit.toml
.github/workflows/: build_docs.yml  ci.yml  release.yml
benchmark/: README.md  run_benchmarks.py  run_cpu_scaling.sh
benchmark/RSeQC/large/: inner_distance.inner_distance_plot.r
benchmark/RustQC/large/: GM12878_REP1.markdup.sorted.biotype_counts.tsv  GM12878_REP1.markdup.sorted.featureCounts.tsv.summary  GM12878_REP1.markdup.sorted.infer_experiment.txt  GM12878_REP1.markdup.sorted.inner_distance_plot.r  GM12878_REP1.markdup.sorted.inner_distance_summary.txt  GM12878_REP1.markdup.sorted.junctionSaturation_plot.r  GM12878_REP1.markdup.sorted.junctionSaturation_summary.txt  GM12878_REP1.markdup.sorted.junction_annotation.txt  GM12878_REP1.markdup.sorted.junction_plot.r  GM12878_REP1.markdup.sorted.read_distribution.txt
benchmark/RustQC/small/: test.biotype_counts.tsv  test.biotype_counts_mqc.tsv  test.featureCounts.tsv  test.inner_distance_plot.r  test.junctionSaturation_plot.r  test.junction_plot.r
benchmark/dupRadar/large/: run_dupRadar_R.R
benchmark/dupRadar/small/: dupMatrix.txt  intercept_slope.txt  run_dupRadar_R.R
benchmark/featureCounts/small/: featureCounts.tsv
benchmark/input/large/: config.yaml
benchmark/large/: run_dupRadar_R.R
benchmark/small/: run_dupRadar_R.R
data/gene_classes/: apolipoprotein.txt  hemoglobin.txt  ribosomal_protein.txt
data/panels/: lm22.tsv  tabula_sapiens_cfrna.tsv  vorperian.tsv
data/snps/: common_snps_grch38_smoke.tsv
docs/: astro.config.mjs  package-lock.json  package.json
docs/scripts/: capture_cli_svg.py
schema/v1/: liquidqc.schema.json
src/: auto_detect.rs  cache.rs  citations.rs  cli.rs  config.rs  counting.rs  dupmatrix.rs  envelope.rs  featurecounts.rs  fetch_references.rs  fitting.rs  genome.rs  gtf.rs  hash.rs  infer_experiment.rs  inner_distance.rs  io.rs  junction_annotation.rs  main.rs  plots.rs  qc_flags.rs  read_distribution.rs  runtime_stats.rs  ui.rs
src/rna/: bam_flags.rs  chrom_metrics.rs  cycle_quality.rs  gene_class.rs  genebody.rs  mod.rs  panels.rs  preseq.rs  saturation.rs  sex_infer.rs  snp_fingerprint.rs  splice_dinuc.rs
src/rna/dupradar/: mod.rs  (+4 more)
tests/: create_test_data.R  integration_test.rs  phase0_cli.rs  phase1_envelope.rs  phase2_fragmentomics.rs  phase3_per_gene.rs  phase4_tier3.rs
tests/data/: test.bam  test.bam.bai  test.gtf
tests/expected/: dupMatrix.txt  fit_curve.txt  intercept_slope.txt  stats.txt
tests/snapshot/: empty_envelope.json
(+98 files in other folders)
