[package]
name = "liquidqc"
version = "0.1.0"
edition = "2021"
rust-version = "1.87"
authors = [
    "Nick Semenkovich <semenko@alum.mit.edu>",
    "Phil Ewels <phil.ewels@seqera.io>",
    "Jon Manning <jonathan.manning@seqera.io>",
]
description = "cfRNA QC + fragmentomics in a single BAM pass. Forked from seqeralabs/RustQC; extends with end-motif k-mers, soft-clip k-mers, fragment-length periodicity, per-gene Tier-2 features, panels, sex inference, SNP fingerprinting, saturation curves, and a versioned JSON+Parquet output schema."
license = "GPL-3.0-or-later"
repository = "https://github.com/semenko/liquidqc"
readme = "README.md"
keywords = ["bioinformatics", "cfrna", "rna-seq", "fragmentomics", "qc"]
categories = ["command-line-utilities", "science"]
homepage = "https://github.com/semenko/liquidqc"
exclude = ["benchmark/", "docs/", "paper/", "tests/", ".github/", "Dockerfile", ".dockerignore", ".pre-commit-config.yaml", "netlify.toml", "CONTRIBUTING.md", "AGENTS.md", "NOTICE"]

[[bin]]
name = "liquidqc"
path = "src/main.rs"

[dependencies]
# CLI argument parsing
clap = { version = "4", features = ["derive", "env"] }

# BAM file reading
rust-htslib = { version = "1", features = ["static"] }

# Plotting
plotters = { version = "0.3", features = ["fontconfig-dlopen"] }
plotters-backend = "0.3"
plotters-svg = "0.3"

# Configuration
serde = { version = "1", features = ["derive"] }
serde_yaml_ng = "0.10"
dirs = "6"

# Interval trees
coitrees = "0.4"

# Parallelism
rayon = "1.11"

# Random number generation
rand = "0.10"
rand_chacha = "0.10"

# Gzip decompression for .gz annotation files
flate2 = "1"

# General utilities
anyhow = "1"
log = "0.4"
env_logger = "0.11"
indexmap = { version = "2", features = ["serde"] }
crc32fast = "1.5.0"
md-5 = "0.10"
libc = "0.2"

# Terminal UI
console = "0.15"
indicatif = "0.17"
number_prefix = "0.4"
serde_json = "1"

[build-dependencies]
cc = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

# Clippy lints inherited from upstream RustQC that fire under the newer
# `stable` toolchain we build with (Rust 1.95+). Suppressed at the package
# level rather than edited in the source files so cherry-picks from
# upstream stay clean. Each entry should be revisited if/when upstream
# changes the affected file.
[lints.clippy]
manual_checked_ops = "allow"       # rna/dupradar/counting.rs, rna/rseqc/accumulators.rs
collapsible_match = "allow"        # rna/rseqc/read_distribution.rs (4 sites)
unnecessary_sort_by = "allow"      # rna/qualimap/index.rs (sort_unstable_by_key suggestion)
